gitTestProject/src/objects/Position__c.object
<CustomObject>
    <description>This object stores information
about the open job positions at our company</description>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <label>Educational Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JavaScript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JavaScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>High-level description of the job and its duties</description>
        <inlineHelpText>High-level description of the job and its duties</inlineHelpText>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco, CA</fullName>
                <color>#FF99FF</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Austin,TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boulder, CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London, England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai, India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sydney, Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tokyo, Japan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>